Updated API routes and chnaged the way of checking roles while authorization. Initially I was passing the roles as empty string in middleware and then passing the role in routes. Now I am directly checking the roles in controller itself, by fetching the role property from req.user object.
