# server/routes/employeeRoute.js
@@ -3,11 +3,12 @@ import {createLeaveRequest,getLeaveRequests,modifyLeaveRequest,deleteLeaveReques
 import { userAuthentication } from "../middlewares/authMiddleware.js";
 
 const router = express.Router();
-router.use(userAuthentication(['employee']));
+// router.use(userAuthentication);
+// By passing ['employee'],it is specifying that only users with the "employee" role can proceed to the next middleware or route handler.
 
-router.post('/leaves', createLeaveRequest);
-router.get('/leaves', getLeaveRequests);
-router.patch('/leaves/:leave_id', modifyLeaveRequest);
-router.delete('/leaves/:leave_id', deleteLeaveRequest);
+router.post('/leaves', userAuthentication(), createLeaveRequest);
+router.get('/leaves', userAuthentication(), getLeaveRequests);
+router.patch('/leaves/:leave_id', userAuthentication(), modifyLeaveRequest);
+router.delete('/leaves/:leave_id', userAuthentication(), deleteLeaveRequest);
 
 export default router;
